# models/order.go
@@ -2,6 +2,7 @@ package models
 
 import (
 	"encoding/json"
+	"fmt"
 	"go-orderfood/queries"
 )
 
@@ -18,45 +19,115 @@ type Order struct {
 	ShopID       string      `json:"shop_id"`
 	NameShop     string      `json:"name_shop"`
 	Address      string      `json:"address"`
-	Status       int         `json:"status"`
+	OrderStatus  string      `json:"order_status"`
 }
 
-func (this *Order) GetOrUs(id string) ([]string, error) {
+func (this *Order) GetOrUs(id string) ([]Order, error) {
 	data, err := GetDataByQuery(queries.QueryGetIDOrUs(id))
 	if err != nil {
-		return []string{}, err
+		return []Order{}, err
 	}
 	if len(data) == 0 {
-		return []string{}, nil
+		return []Order{}, nil
 	}
 	bData, err := json.Marshal(data)
 	if err != nil {
-		return []string{}, err
+		return []Order{}, err
 	}
-	lid := []string{}
+	lid := []Order{}
 	err = json.Unmarshal(bData, &lid)
 	if err != nil {
-		return []string{}, err
+		return []Order{}, err
 	}
 	return lid, nil
 }
 
-func (this *Order) GetOr(id string) (Order, error) {
-	data, err := GetDataByQuery(queries.QueryGetIDOrUs(id))
+func (this *Order) GetOrSh() ([]Order, error) {
+	data, err := GetDataByQuery(queries.QueryGetOrSh())
 	if err != nil {
-		return Order{}, err
+		return []Order{}, err
 	}
 	if len(data) == 0 {
-		return Order{}, nil
+		return []Order{}, nil
 	}
 	bData, err := json.Marshal(data)
 	if err != nil {
-		return Order{}, err
+		return []Order{}, err
 	}
-	o := Order{}
-	err = json.Unmarshal(bData, &o)
+	lid := []Order{}
+	err = json.Unmarshal(bData, &lid)
 	if err != nil {
-		return Order{}, err
+		return []Order{}, err
 	}
-	return o, nil
+	return lid, nil
+}
+
+func (this *Order) GetOrS(id string) ([]Order, error) {
+	data, err := GetDataByQuery(queries.QueryGetOrS(id))
+	if err != nil {
+		return []Order{}, err
+	}
+	if len(data) == 0 {
+		return []Order{}, nil
+	}
+	bData, err := json.Marshal(data)
+	if err != nil {
+		return []Order{}, err
+	}
+	lid := []Order{}
+	err = json.Unmarshal(bData, &lid)
+	if err != nil {
+		return []Order{}, err
+	}
+	return lid, nil
+}
+
+func (this *Order) GetOrSh1(id string) ([]Order, error) {
+	data, err := GetDataByQuery(queries.QueryGetOrSh1(id))
+	if err != nil {
+		return []Order{}, err
+	}
+	if len(data) == 0 {
+		return []Order{}, nil
+	}
+	bData, err := json.Marshal(data)
+	if err != nil {
+		return []Order{}, err
+	}
+	lid := []Order{}
+	err = json.Unmarshal(bData, &lid)
+	if err != nil {
+		return []Order{}, err
+	}
+	return lid, nil
+}
+
+func (this *Order) GetStatus(id string) (string, error) {
+	data, err := GetDataByQuery(queries.QueryGetStatus(id))
+	if err != nil {
+		return "", err
+	}
+
+	return fmt.Sprintf("%v", data[0]["order_status"]), nil
+}
+
+func (this *Order) GetStoreOrStatus(id string) (string, string, error) {
+	data, err := GetDataByQuery(queries.QueryGetStoreOrStaus(id))
+	if err != nil {
+		return "", "", err
+	}
+
+	return fmt.Sprintf("%v", data[0]["order_status"]), fmt.Sprintf("%v", data[0]["store_id"]), nil
+}
+
+func (this *Order) UpStatus(ido, ids string) error {
+	return ExecNonQuery(queries.QueryUpStatus(ido, ids))
+}
+
+func (this *Order) EndStatus(ido, ids string) error {
+	return ExecNonQuery(queries.QueryEndStatus(ido, ids))
+}
+
+func (this *Order) UpStatusStore(id string) error {
+	return ExecNonQuery(queries.QueryUpStoreOrStatus(id))
 }
